added some refs

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -54,6 +54,37 @@ body{
         }
     }
     main{
+        section{
+            .sec-div1{
+
+                h1{
+
+                }
+
+                p{
+
+                }
+            }
+            .sec-div2{
+
+                .sec1-div2-img{
+
+                    .speed{
+
+                    }
+                    .rel{
+
+                    }
+                    .eff{
+                        
+                    }
+
+
+                }
+
+            }
+
+        }
 
     }
 
