changed the hover of nav links to black

--- a/styles/index.css
+++ b/styles/index.css
@@ -40,5 +40,5 @@ body header nav .nav-div ul li .a-links {
   font-family: sans-serif;
 }
 body header nav .nav-div ul li .a-links:hover {
-  color: rgb(45, 111, 116);
+  color: black;
 }/*# sourceMappingURL=index.css.map */
