--- a/styles/index.scss
+++ b/styles/index.scss
@@ -45,7 +45,8 @@ body{
                             font-family: sans-serif;
 
                             &:hover {
-                                color: rgb(45, 111, 116);
+                                // color: rgb(45, 111, 116);
+                                color: black;
                                
                             }
                         }
