--- a/styles/index.css
+++ b/styles/index.css
@@ -49,4 +49,19 @@ body main section .sec-div2 .sec1-div2-img {
 body main section .sec-div2 .sec1-div2-img .rel {
   height: 37px;
   padding-bottom: 10px;
+}
+body main section .button-div .contact {
+  border-radius: 5px;
+  border: 1px solid white;
+  font-size: 16px;
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
+  height: 40px;
+  width: 100px;
+  transition: 0.3s ease-in-out;
+}
+body main section .button-div .contact:hover {
+  box-shadow: 0px 0px 5px 5px rgb(142, 230, 132);
+  transition: 0.3s ease-in-out;
 }/*# sourceMappingURL=index.css.map */
