--- a/styles/index.scss
+++ b/styles/index.scss
@@ -97,6 +97,31 @@ body{
 
             }
 
+            .button-div{
+
+                .contact{
+                    border-radius: 5px;
+                    border: 1px solid white;
+                    font-size: 16px;
+                    color: white;
+                    background-color: transparent;
+                    cursor: pointer;
+                    height:40px;
+                    width: 100px;
+                    transition: .3s ease-in-out;
+
+                    &:hover{
+                        box-shadow: 0px 0px 5px 5px rgb(142, 230, 132);
+                        // background-color: rgb(69, 122, 64);
+                        // color: black;
+                        transition: .3s ease-in-out;
+
+                    }
+                    
+
+                }
+            }
+
         }
 
     }
