--- a/styles/index.css
+++ b/styles/index.css
@@ -39,6 +39,13 @@ body header nav .nav-div ul li .a-links {
 body header nav .nav-div ul li .a-links:hover {
   color: black;
 }
+body main section .sec-div1 h1 {
+  font-size: 50px;
+}
+body main section .sec-div1 .p-help {
+  font-size: 20px;
+  font-weight: 600;
+}
 body main section .sec-div2 {
   display: flex;
   gap: 50px;
@@ -54,6 +61,7 @@ body main section .button-div .contact {
   border-radius: 5px;
   border: 1px solid white;
   font-size: 16px;
+  font-weight: 600;
   color: white;
   background-color: transparent;
   cursor: pointer;
