--- a/styles/index.scss
+++ b/styles/index.scss
@@ -61,16 +61,21 @@ body{
             .sec-div1{
 
                 h1{
+                    font-size: 50px;
 
                 }
 
-                p{
+                .p-help{
+                    font-size: 20px;
+                    font-weight: 600;
+                    // color: yellow;
+
 
                 }
             }
             .sec-div2{
                 display: flex;
-                gap: 50px;
+                gap: 50px; 
                 // border: 1px solid red;
 
                 .sec1-div2-img{
@@ -103,6 +108,7 @@ body{
                     border-radius: 5px;
                     border: 1px solid white;
                     font-size: 16px;
+                    font-weight: 600;
                     color: white;
                     background-color: transparent;
                     cursor: pointer;
