--- a/styles/index.css
+++ b/styles/index.css
@@ -39,6 +39,11 @@ body header nav .nav-div ul li .a-links {
 body header nav .nav-div ul li .a-links:hover {
   color: black;
 }
+body main section .svg-502-div .svg-502-img {
+  height: 80vh;
+  position: absolute;
+  right: 1vh;
+}
 body main section .sec-div1 h1 {
   font-size: 50px;
 }
@@ -94,4 +99,31 @@ body main section .button-div .contact {
 body main section .button-div .contact:hover {
   box-shadow: 0px 0px 5px 5px rgb(142, 230, 132);
   transition: 0.3s ease-in-out;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 1080px) {
+  .svg-502-img {
+    width: 40vw;
+    height: 800vh;
+    position: absolute;
+    right: 1vh;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .svg-502-img {
+    width: 40vw;
+    height: 8vh;
+    position: absolute;
+    right: 1vh;
+    bottom: -60vh;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .svg-502-img {
+    width: 30em;
+    height: 20em;
+    position: absolute;
+    left: 15em;
+    top: 25vh;
+  }
 }/*# sourceMappingURL=index.css.map */
