--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,6 +13,8 @@ body{
 
     header{
         // border: 1px solid yellow;
+        // border-bottom: 1px solid black;
+        // position: fixed;
         nav{
             display: flex;
             justify-content: space-between;
@@ -58,6 +60,22 @@ body{
     }
     main{
         section{
+            .svg-502-div{
+
+                .svg-502-img{
+                    // width: 10vw;
+                    height: 80vh;
+                    position: absolute;
+                    right: 1vh;
+                }
+
+                // @media (min-width: 480px) and (max-width: 1080px) {
+                //     body {
+                //       background-color: lightgreen;
+                //     }
+                //   }
+
+            }
             .sec-div1{
 
                 h1{
@@ -155,6 +173,50 @@ body{
         }
 
     }
+    
 
 
 }
+@media only screen and (min-width: 320px) and (max-width: 1080px) {
+    .svg-502-img{
+        width: 40vw;
+        height: 800vh;
+        position: absolute;
+        right: 1vh;
+        // left: 100vh;
+        // display: none;
+    }
+  }
+  @media only screen and (min-width: 320px) and (max-width: 768px) {
+    .svg-502-img{
+        width: 40vw;
+        height: 8vh;
+        position: absolute;
+        right: 1vh;
+        bottom: -60vh;
+        // left: 100vh;
+        // display: none;
+    }
+  }
+  @media only screen and (min-width: 320px) and (max-width: 425px) {
+    .svg-502-img{
+        width: 30em;
+        height: 20em;
+        position: absolute;
+        left: 15em;
+        top: 25vh;
+        // left: 100vh;
+        // display: none;
+    }
+  }
+//   @media only screen and (min-width: 320px) and (max-width: 425px) {
+//     .svg-502-img{
+//         width: 30em;
+//         height: 20em;
+//         position: absolute;
+//         left: 15em;
+//         top: 25vh;
+//         // left: 100vh;
+//         // display: none;
+//     }
+//   }
