--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(./../images/pexels-sky.jpg);
+  background-image: url(./../images/pexels-hand.jpg);
   box-sizing: border-box;
   margin: 2% 5%;
   color: white;
@@ -35,9 +35,11 @@ body header nav .nav-div ul li .a-links {
   color: white;
   text-decoration: none;
   font-family: sans-serif;
+  transition: all 0.3s ease-in-out;
 }
 body header nav .nav-div ul li .a-links:hover {
-  color: black;
+  color: rgb(91, 233, 76);
+  transition: all 0.3s ease-in-out;
 }
 body main section .svg-502-div .svg-502-img {
   height: 80vh;
