--- a/styles/about.scss
+++ b/styles/about.scss
@@ -66,9 +66,10 @@ body{
 
                 .svg-502-img{
                     // width: 10vw;
-                    height: 80vh;
+                    height: 50vh;
                     position: absolute;
-                    right: 1vh;
+                    right: 30vh;
+                    top: 20vh;
                 }
 
                 // @media (min-width: 480px) and (max-width: 1080px) {
