--- a/styles/about.scss
+++ b/styles/about.scss
@@ -6,7 +6,7 @@
 
 body{
     // background: rgb(24, 24, 41);
-    background-image: url(./../images/pexels-hand.jpg);
+    background-image: url(../images/pexels-glasses.jpg);
     box-sizing: border-box;
     margin: 2% 5%;
     color: white;
@@ -88,7 +88,8 @@ body{
 
                 .p-help{
                     font-size: 20px;
-                    font-weight: 600;
+                    font-weight: 300;
+                    font-family: 'nunito';
                     // color: yellow;
 
 
