--- a/styles/about.scss
+++ b/styles/about.scss
@@ -88,10 +88,10 @@ body{
                 }
 
                 .ul-stat{
-                    color: white;
+                    color: rgb(247, 14, 14);
                     
                     .li-img{
-                        color: white;
+                        color: rgb(14, 230, 25);
                         
                     }
                 }
