uncommented the ul list color

--- a/styles/about.css
+++ b/styles/about.css
@@ -50,11 +50,8 @@ body main section .svg-502-div .svg-502-img {
 body main section .sec-div1 h1 {
   font-size: 50px;
 }
-body main section .sec-div1 .ul-stat {
-  color: rgb(247, 14, 14);
-}
 body main section .sec-div1 .ul-stat .li-img {
-  color: rgb(14, 230, 25);
+  color: white;
 }
 body main section .sec-div1 .p-help {
   font-size: 20px;
