--- a/styles/about.scss
+++ b/styles/about.scss
@@ -92,7 +92,9 @@ body{
                     
                     .li-img{
                         color: white;
-                        
+                        font-size: 20px;
+                        text-shadow: 1px 1px 1px rgb(0, 0, 0);
+
                     }
                 }
 
@@ -104,7 +106,7 @@ body{
                     // background-color: rgba(27, 121, 184, 0.226);
                     // color: yellow;
                     // border: 1px solid black;
-                    border-radius: 10px;
+                    // border-radius: 10px;
 
                     
 
