--- a/styles/about.css
+++ b/styles/about.css
@@ -53,7 +53,8 @@ body main section .sec-div1 h1 {
 body main section .sec-div1 .ul-stat .li-img {
   color: white;
   font-size: 20px;
-  text-shadow: 1px 1px 1px rgb(0, 0, 0);
+  font-weight: 300;
+  text-shadow: 2px 2px 0px rgb(0, 0, 0);
 }
 body main section .sec-div1 .p-help {
   font-size: 20px;
@@ -67,6 +68,7 @@ body main section .sec-div2 {
 }
 body main section .sec-div2 .sec1-div2-img {
   justify-items: center;
+  text-shadow: 1px 1px 1px rgb(0, 0, 0);
 }
 body main section .sec-div2 .sec1-div2-img .speed {
   transition: all 1s ease-in-out;
