--- a/styles/about.css
+++ b/styles/about.css
@@ -55,6 +55,7 @@ body main section .sec-div1 .ul-stat .li-img {
   font-size: 20px;
   font-weight: 300;
   text-shadow: 2px 2px 0px rgb(0, 0, 0);
+  list-style-type: " + + ";
 }
 body main section .sec-div1 .p-help {
   font-size: 20px;
