--- a/styles/about.scss
+++ b/styles/about.scss
@@ -95,7 +95,7 @@ body{
                         font-size: 20px;
                         font-weight: 300;
                         text-shadow: 2px 2px 0px rgb(0, 0, 0);
-
+                        list-style-type: ' + + ';
                     }
                 }
 
