added a ReadMe file for media queries

--- a/styles/about.css
+++ b/styles/about.css
@@ -120,6 +120,8 @@ body main section .button-div .contact:hover {
     height: 800vh;
     position: absolute;
     right: 1vh;
+    border: 1px solid yellow;
+    margin-left: -100px;
   }
 }
 @media only screen and (min-width: 320px) and (max-width: 768px) {
