--- a/styles/about.scss
+++ b/styles/about.scss
@@ -198,12 +198,18 @@ body{
 
 
 }
+
+// @media only screen and (min-width: 320px) and (max-width: 1080px) and (orientation: portrait) {
+
+
 @media only screen and (min-width: 320px) and (max-width: 1080px) {
     .svg-502-img{
         width: 40vw;
         height: 800vh;
         position: absolute;
         right: 1vh;
+        border: 1px solid yellow;
+        margin-left: -100px;
         // left: 100vh;
         // display: none;
     }
