--- a/styles/about.scss
+++ b/styles/about.scss
@@ -202,7 +202,7 @@ body{
 // @media only screen and (min-width: 320px) and (max-width: 1080px) and (orientation: portrait) {
 
 
-@media only screen and (min-width: 320px) and (max-width: 1080px) {
+@media only screen and (min-width: 320px) and (max-width: 1080px) and (orientation: landscape) {
     .svg-502-img{
         width: 40vw;
         height: 800vh;
