done with phone orientation

--- a/styles/about.css
+++ b/styles/about.css
@@ -148,6 +148,6 @@ body main section .button-div .contact:hover {
     height: 10em;
     position: absolute;
     left: 23em;
-    bottom: 2000px;
+    bottom: 20vh;
   }
 }/*# sourceMappingURL=about.css.map */
