--- a/styles/about.scss
+++ b/styles/about.scss
@@ -247,7 +247,7 @@ body{
         height: 10em;
         position: absolute;
         left: 23em;
-        bottom: 2000px;
+        bottom: 20vh;
         // border: 1px solid red;
         // left: 100vh;
         // display: none;
